# agent-risk

./: .gitignore  CITATION.cff  LICENSE  Pipfile  README.md  ai.config  architecture.drawio  pyproject.toml  rejects.tex  results.tex  run_check_bias.py  run_eval.py  run_forward_sim.py  run_from.py  run_game.py  run_over_processes.py  run_rejected_collection.py  run_sim.py  run_sim_from.py  run_sim_from_test.py  run_test_stack.py  test.layout  test.out  test.stack  test.state  test_movement_animations.py  write_rejects.py  write_results.py
.github/: copilot-instructions.md
eval/: readme.md
risk/agents/: __init__.py  agent.py  ai.py  ai_game_loop.py  finder.py  plans.py
risk/agents/bpmn/: __init__.py  defensive.py  offensive.py  random.py  readme.md
risk/agents/bt/: __init__.py  bases.py  defensive.py  designs.drawio  offensive.py  random.py  readme.md  sandbox.py
risk/agents/devs/: __init__.py  base.py  defensive.py  offensive.py  readme.md
risk/engine/: __init__.py  base.py  controller.py  risk.py  turns.py
risk/game/: __init__.py  animation.py  input.py  loop.py  loop_process.py  renderer.py  selection.py  ui.py  ui_renderer.py
risk/state/: __init__.py  board_generator.py  fight.py  game_state.py  plan.py  territory.py  turn_manager.py  ui.py
risk/utils/: copy.py  distance.py  groups.py  loading.py  logging.py  map.py  movement.py  polygon.py  replay.py  rewards.py
tests/game/: test_ai_game_loop_pause.py  test_game_loop_pause.py
tests/state/: test_board.py  test_fight.py  test_game_state.py  test_plans.py  test_turn_manager.py
(+131 files in other folders)
